--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     {% load cache %}
     {% cache 20 index_page page.number %}
         <div class="container">
+            {% include "includes/menu.html" with index=True %}
             {% for post in page %}
                 {% include "includes/post_card.html" with post=post %}
             {% endfor %}
