--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,6 +22,18 @@
         <!-- Здесь постраничная навигация паджинатора -->
         {% include "includes/paginator.html" %}
     </div>
-
+    <li class="list-group-item">
+        {% if following %}
+        <a class="btn btn-lg btn-light"
+                href="{% url 'profile_unfollow' profile.username %}" role="button">
+                Отписаться
+        </a>
+        {% else %}
+        <a class="btn btn-lg btn-primary"
+                href="{% url 'profile_follow' profile.username %}" role="button">
+        Подписаться
+        </a>
+        {% endif %}
+    </li>
 </main>
 {% endblock %}
