--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,6 +7,19 @@
     <div class="row">
         <div class="col-md-3 mb-3 mt-1">
             {% include "includes/author_card.html" %}
+            <li class="list-group-item">
+        {% if following %}
+        <a class="btn btn-lg btn-light"
+                href="{% url 'profile_unfollow' author.username %}" role="button">
+                Отписаться
+        </a>
+        {% else %}
+        <a class="btn btn-lg btn-primary"
+                href="{% url 'profile_follow' author.username %}" role="button">
+        Подписаться
+        </a>
+        {% endif %}
+    </li>
         </div>
     </div>
 
@@ -22,18 +35,6 @@
         <!-- Здесь постраничная навигация паджинатора -->
         {% include "includes/paginator.html" %}
     </div>
-    <li class="list-group-item">
-        {% if following %}
-        <a class="btn btn-lg btn-light"
-                href="{% url 'profile_unfollow' profile.username %}" role="button">
-                Отписаться
-        </a>
-        {% else %}
-        <a class="btn btn-lg btn-primary"
-                href="{% url 'profile_follow' profile.username %}" role="button">
-        Подписаться
-        </a>
-        {% endif %}
-    </li>
+
 </main>
 {% endblock %}
