Change include of menu.html in follow.html

--- a/templates/follow.html
+++ b/templates/follow.html
@@ -5,7 +5,7 @@
     {% load cache %}
     {% cache 20 follow_page page.number %}
         <div class="container">
-            {% include "includes/menu.html" with index=True %}
+            {% include "includes/menu.html" with follow=True %}
             {% for post in page %}
                 {% include "includes/post_card.html" with post=post %}
             {% endfor %}
