Change context for post_view.py and comments.html

--- a/templates/includes/comments.html
+++ b/templates/includes/comments.html
@@ -16,7 +16,7 @@
 {% endif %}
 
 <!-- Комментарии -->
-{% for item in comments.all %}
+{% for item in comments %}
 <div class="media card mb-4">
     <div class="media-body card-body">
         <h5 class="mt-0">
