--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,29 +7,31 @@
     <div class="row">
         <div class="col-md-3 mb-3 mt-1">
             {% include "includes/author_card.html" %}
+            {% if request.user != author %}
             <li class="list-group-item">
-        {% if following %}
-        <a class="btn btn-lg btn-light"
-                href="{% url 'profile_unfollow' author.username %}" role="button">
-                Отписаться
-        </a>
-        {% else %}
-        <a class="btn btn-lg btn-primary"
-                href="{% url 'profile_follow' author.username %}" role="button">
-        Подписаться
-        </a>
-        {% endif %}
-    </li>
+                {% if following %}
+                <a class="btn btn-lg btn-light"
+                   href="{% url 'profile_unfollow' author.username %}" role="button">
+                    Отписаться
+                </a>
+                {% else %}
+                <a class="btn btn-lg btn-primary"
+                   href="{% url 'profile_follow' author.username %}" role="button">
+                    Подписаться
+                </a>
+                {% endif %}
+            </li>
+            {% endif %}
         </div>
     </div>
 
     <div class="col-md-9">
         {% for post in page %}
-            {% include "includes/post_card.html" %}
+        {% include "includes/post_card.html" %}
 
-            {% if not forloop.last %}
-                <hr>
-            {% endif %}
+        {% if not forloop.last %}
+        <hr>
+        {% endif %}
         {% endfor %}
 
         <!-- Здесь постраничная навигация паджинатора -->
